left-edge grouping works well on a few samples